@@ -24,6 +24,8 @@ import java.io.FileInputStream;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.lang.reflect.Method;
+import java.net.JarURLConnection;
+import java.net.URL;
 import java.util.HashSet;
 import java.util.Iterator;
 
@@ -86,9 +88,6 @@ public class WebServiceTask extends Task {
     private String encStyle="rpc";
     //SOAP encoding use: encoded|literal
     private String encUse="encoded";
-    
-    private final static String WS_CONF_NS = "http://pustefix.sourceforge.net/wsconfig200401";
-    private final static String CUS_NS = "http://www.schlund.de/pustefix/customize";
     
     public void checkAttributes() throws BuildException {
     	if(srcdir==null) throw new BuildException("No source directory specified.");
@@ -233,9 +232,10 @@ public class WebServiceTask extends Task {
                         String wsEncUse=encUse;
                         if(conf.getEncodingUse()!=null) wsEncUse=conf.getEncodingUse();
                         
-                        String wsItfPath=wsItf.replace('.',File.separatorChar)+".java";
-                        File wsItfFile=new File(srcdir,wsItfPath);
-                        if(!wsItfFile.exists()) throw new BuildException("Web service interface source '"+wsItfFile.getAbsolutePath()+"' doesn't exist.");
+                        //Don't check for source files cause webservice classes can come from jar file
+                        //String wsItfPath=wsItf.replace('.',File.separatorChar)+".java";
+                        //File wsItfFile=new File(srcdir,wsItfPath);
+                        //if(!wsItfFile.exists()) throw new BuildException("Web service interface source '"+wsItfFile.getAbsolutePath()+"' doesn't exist.");
     
                         File wsdlFile=new File(wsdlDir,wsName+".wsdl");
                         
@@ -281,7 +281,7 @@ public class WebServiceTask extends Task {
                             String wsddPathPart=getPackageName(wsItf).replace('.',File.separatorChar);
                             wsddPath=new File(tmpDir,wsddPathPart);
                         }
-                        File wsddFile=wsddFile=new File(tmpDir,wsName+".wsdd");
+                        File wsddFile=new File(tmpDir,wsName+".wsdd");
                         if(!wsddFile.exists() || wsddFile.lastModified()<wsdlFile.lastModified()) {
                             
                             wsddCnt++;
@@ -432,7 +432,7 @@ public class WebServiceTask extends Task {
                 Class clazz=Class.forName(className);
                 if(!clazz.isInterface()) throw new BuildException("Web service interface class doesn't represent an interface type");
                 Method[] methods=clazz.getDeclaredMethods();
-                HashSet names=new HashSet();
+                HashSet<String> names=new HashSet<String>();
                 for(int i=0;i<methods.length;i++) {
                     String name=methods[i].getName();
                     if(names.contains(name)) throw new BuildException("Web service interface class '"+className+"' contains "+
@@ -477,8 +477,22 @@ public class WebServiceTask extends Task {
                     if(clazz.isArray()) return checkTypeChange(getArrayType(clazz),wsdlFile);   
                     String path=clazz.getName().replace('.',File.separatorChar)+".class";
                     File file=new File(builddir,path);
-                    if(!file.exists()) return false;
-                    if(wsdlFile.lastModified()<file.lastModified()) return true;
+                    long lastMod=Long.MAX_VALUE;
+                    if(!file.exists()) {
+                        URL url=cl.getResource(path);
+                        if(url==null) throw new BuildException("Can't get URL for webservice class '"+clazz.getName()+"' from jar file.");
+                        else {
+                            try {
+                                JarURLConnection con=(JarURLConnection)url.openConnection();
+                                lastMod=con.getJarEntry().getTime();
+                            } catch(IOException x) {
+                                throw new BuildException("Can't get modification time for webservice class '"+clazz.getName()+"' from jar file.");
+                            }
+                        }
+                    } else {
+                        lastMod=file.lastModified();
+                    }
+                    if(wsdlFile.lastModified()<lastMod) return true;
                     if(clazz.isInterface()) {
                         Class[] itfs=clazz.getInterfaces();
                         for(int i=0;i<itfs.length;i++) {
