@@ -1,3 +1,10 @@
+2007-01-02  Martin Leidig  <mleidig@schlund.de>
+
+	* src/de/schlund/pfixcore/webservice/generate/WebServiceTask.java: removed check
+	for webservice source files (cause they aren't really required and are absent if
+	the services come from jar files), extended modification check (modtime within jar
+	file is checked too)
+
 2007-01-02  Sebastian Marsching  <sebastian.marsching@1und1.de>
 
 	* projects/core/editor2/conf/edit.conf.xml: 
